[gd_scene load_steps=10 format=2]

[ext_resource path="res://ui/Dialog/assets/dialog-background.png" type="Texture" id=1]
[ext_resource path="res://assets/theme/theme.tres" type="Theme" id=2]
[ext_resource path="res://ui/Dialog_Box/Player/DialoguePlayer.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/Dialog_Box/DialogBox.gd" type="Script" id=4]
[ext_resource path="res://ui/Dialog_Box/Font.tres" type="DynamicFont" id=5]
[ext_resource path="res://ui/Dialog/assets/next-indicator.png" type="Texture" id=6]
[ext_resource path="res://actors/npc/Class/Assets/Carlos/portraits/Default.png" type="Texture" id=7]
[ext_resource path="res://ui/Dialog/Dialog.tres" type="DynamicFont" id=8]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1842, 1000 ), Vector2( 1842, 1016 ) ]
}

[node name="DialogBox" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Portrait" type="TextureRect" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1845.0
margin_top = -800.0
margin_right = -1345.0
margin_bottom = -300.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="TextureRect" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 21.0
margin_top = -300.0
margin_right = -21.0
margin_bottom = -24.0
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Label" parent="Container"]
margin_left = 11.0
margin_top = -59.0
margin_right = 143.0
margin_bottom = 7.0
size_flags_vertical = 5
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Name"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="Text" type="RichTextLabel" parent="Container"]
margin_left = 30.0
margin_top = 30.0
margin_right = 1845.44
margin_bottom = 248.0
size_flags_horizontal = 3
size_flags_vertical = 5
custom_fonts/normal_font = ExtResource( 8 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[ PLACEHOLDER TEXT ]"
text = "[ PLACEHOLDER TEXT ]"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 18.0
margin_top = 777.0
margin_right = 1895.0
margin_bottom = 1051.0
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="next-indicator" type="Sprite" parent="."]
position = Vector2( 1842, 1015.01 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="next-indicator"]
method_call_mode = 1
anims/Idle = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="PortraitTween" type="Tween" parent="."]

[node name="DialoguePlayer" parent="." instance=ExtResource( 3 )]
[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="tween_started" from="Tween" to="." method="_on_Tween_tween_started"]
[connection signal="finished" from="DialoguePlayer" to="." method="_on_DialoguePlayer_finished"]
